# llama-cpp-sluice

./: .gitignore  LICENSE  README.md  promptfooconfig.yaml  pyproject.toml
deployments/docker/: Dockerfile  docker-compose.yml
deployments/proxmox/: recovery-example.sh  scavenge-example.sh  setup-lxc.sh  sluice.service
docs/: api.md  architecture.md  concurrency.md  priority-lanes.md  test-plan-graceful-shutdown.md
src/sluice/: __init__.py  bank.py  engine.py  pools.py  radix_cache.py  self_test_prompts.json  server.py
src/sluice/middleware/: trimmer.py
tests/: conftest.py  stress_test_locust.py  test_bank.py  test_engine.py  test_openai_compliance.py  test_radix_cache.py  test_radix_cache_concurrent.py  test_sampling.py  test_server.py  test_shutdown.py  test_shutdown_standalone.py  test_trimmer.py  test_v020.py
