[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-sluice"
version = "0.1.0"
authors = [
  { name="Scott Hernandez" },
]
description = "Shared-Weight Asymmetric Multi-Context (SWAMC) server for llama.cpp"
readme = "README.md"
requires-python = ">=3.10"
license = { text="MIT" }
dependencies = [
    "llama-cpp-python>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "prometheus-client>=0.20.0",
    "litellm>=1.34.0",
    "locust>=2.24.0"
]

[tool.setuptools.packages.find]
where = ["src"]
