[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-sluice"
version = "0.9.4"
description = "Dynamic Asymmetric Inference Server for llama.cpp"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "llama-cpp-python>=0.3.0",
    "prometheus-client",
    "jinja2"
]

[project.scripts]
sluice-server = "sluice.server:main"

[tool.setuptools.packages.find]
where = ["src"]
